compiler/tools/fpp-check/test/spec_init_old/invalid_instance.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/spec_init_old/invalid_instance.fpp: 5.6
init M phase 0 "c0 phase 0"
     ^
error: invalid symbol M: not a component instance symbol
symbol is defined here:
[ local path prefix ]/compiler/tools/fpp-check/test/spec_init_old/invalid_instance.fpp: 1.1
module M {
^
